--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 3,
   "name": "Prod Guard",
-  "version": "1.0",
+  "version": "1.1",
   "description": "Adds a warning banner for specific AWS account numbers",
-  "permissions": ["activeTab", "storage"],
+  "permissions": ["storage"],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
@@ -23,6 +23,12 @@
     {
       "matches": ["*://*.console.aws.amazon.com/*"],
       "js": ["content.js"]
+    }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["popup.css"],
+      "matches": ["<all_urls>"]
     }
   ]
 }
