--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "main": "content.js",
   "scripts": {
     "test": "jest",
-    "package": "zip -r prod-guard.zip manifest.json popup.html popup.js content.js icon16.png icon32.png icon48.png icon128.png"
+    "package": "zip -r prod-guard.zip manifest.json popup.html popup.js content.js icon16.png icon32.png icon48.png icon128.png",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0"
   }
