--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "content.js",
   "scripts": {
     "test": "jest",
-    "package": "zip -r prod-guard.zip manifest.json popup.html popup.js content.js icon16.png icon32.png icon48.png icon128.png",
+    "package": "zip -r prod-guard.zip manifest.json popup.html popup.css popup.js content.js icon16.png icon32.png icon48.png icon128.png",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
